--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 
 </head>
 <body>
-
+div
     <div class="container"> <!-- 최외곽 div -->
         <div class="navigation"> <!-- 상단 네비게이션 div -->
             <div class="logo">  <!-- 로고 div -->
