--- a/event.html
+++ b/event.html
@@ -6,13 +6,20 @@
     <title>선착순 이벤트 </title>
 
         <!--mystyle.css 파일 불러와서 적용시키기  -->
-        <link rel="stylesheet" href="./resources/css/mycss.css">
+        <link rel="stylesheet" href="./resources/css/mystlye.css">
 
     <style>
 
         .event{
             width: 70%;
             background-color: pink;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            padding-top: 100px;
+            padding-bottom: 100px;
+            
+
         }
 
         .body{
